--- a/public/schedule/week-08/index.html
+++ b/public/schedule/week-08/index.html
@@ -376,7 +376,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/16-logistic-odds-ratios.html">Logistic regression: Odds ratios</a></td>
 <td><a href="https://warpwire.duke.edu/w/RZgEAA/">Logistic regression: Odds ratios</a></td>
-<td>AE 16</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-16-odds-ratios.html">AE 16: Risk of Heart disease - odds ratios</a></td>
 </tr>
 </tbody>
 </table>
