--- a/public/appex/ae-16-odds-ratios.html
+++ b/public/appex/ae-16-odds-ratios.html
@@ -393,7 +393,7 @@ summary {
 </div>
 <div id="schedule-udpate" class="section level2">
 <h2>Schedule udpate</h2>
-<p>🍁 Happy STA 21- Fall break! 🍁</p>
+<p>🍁 Happy STA 210 - Fall break! 🍁</p>
 <ul>
 <li>Tomorrow’s lab: Mid-semester feedback + Project proposal work day</li>
 <li>HW 05 will be assigned on <strong>Wed, Oct 14</strong></li>
@@ -414,7 +414,7 @@ summary {
 <li>0: Not high risk of having heart disease in next 10 years</li>
 </ul></li>
 <li><code>sysBP</code>: systolic blood pressure (mmHg)</li>
-<li><code>prevalentHyp</code>: 0 = Hypertension not prevalent in family history; 1 = Hypertension prevalent in family history</li>
+<li><code>prevalentHyp</code>: No = Hypertension not prevalent in family history; Yes = Hypertension prevalent in family history</li>
 </ul>
 <div id="part-1odds-ratios" class="section level2">
 <h2>Part 1:Odds Ratios</h2>
