--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -285,7 +285,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-09/">Week 09</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-09/">Week 09: Logistic regression</a>
         </div>
     </div>
     
