--- a/public/schedule/week-09/index.html
+++ b/public/schedule/week-09/index.html
@@ -374,7 +374,7 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Logistic regression: inference</td>
+<td><a href="http://sta210-fa20.netlify.app/slides/18-logistic-inference.html">Logistic regression: inference</a></td>
 <td>Logistic regression: inference</td>
 <td>AE 18</td>
 </tr>
@@ -424,7 +424,7 @@ font-size: 18px;
 <p><strong>Upcoming teas</strong>:</p>
 <p><a href="http://linkedin.com/in/emily-tallman"><strong>Emily Tallman</strong></a>, Thu, Oct 15 11a - 12p</p>
 <ul>
-<li><a href="https://forms.gle/fZANces6Qw1gpwcc6">Click here</a></li>
+<li><a href="https://forms.gle/fZANces6Qw1gpwcc6">Click here</a> to sign up</li>
 </ul>
 <h3 id="this-is-statistics-fall-data-challenge">This is Statistics Fall Data Challenge</h3>
 <p><a href="https://thisisstatistics.org/falldatachallenge/">Click here</a> for details on the Get out the Vote! Fall Data Challenge by the American Statistical Association (ASA). Submissions are due <strong>November 11</strong>.</p>
