--- a/public/schedule/week-09/index.html
+++ b/public/schedule/week-09/index.html
@@ -375,7 +375,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="http://sta210-fa20.netlify.app/slides/18-logistic-inference.html">Logistic regression: inference</a></td>
-<td>Logistic regression: inference</td>
+<td><a href="https://warpwire.duke.edu/w/W6IEAA/">Logistic regression: inference</a></td>
 <td>AE 18</td>
 </tr>
 </tbody>
