--- a/public/schedule/week-09/index.html
+++ b/public/schedule/week-09/index.html
@@ -376,7 +376,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="http://sta210-fa20.netlify.app/slides/18-logistic-inference.html">Logistic regression: inference</a></td>
 <td><a href="https://warpwire.duke.edu/w/W6IEAA/">Logistic regression: inference</a></td>
-<td>AE 18</td>
+<td><a href="http://sta210-fa20.netlify.app/appex/ae-18-inference.html">AE 18: Response to Leukemia Treatment</a></td>
 </tr>
 </tbody>
 </table>
