add links to lab 06

--- a/public/schedule/week-09/index.html
+++ b/public/schedule/week-09/index.html
@@ -413,7 +413,7 @@ font-size: 18px;
 <td><strong>due Oct 21 at 11:59p</strong></td>
 </tr>
 <tr>
-<td>Lab 06</td>
+<td><a href="https://sta210-fa20.netlify.app/labs/lab-06-logistic.html">Lab 06</a></td>
 <td><strong>due Oct 21 at 11:59p</strong></td>
 </tr>
 </tbody>
