update ex 9 indentation.

--- a/public/labs/lab-06-logistic.html
+++ b/public/labs/lab-06-logistic.html
@@ -585,11 +585,9 @@ text-decoration: underline;
 <li><p>Let’s start by fitting a model using the demographic factors - <code>age</code>, <code>sex</code>, <code>sei10</code>, and <code>region</code> - to predict the odds a person is satisfied with spending on mass transportation. Make any necessary adjustments to the variables so the intercept will have a meaningful interpretation.</p></li>
 <li><p>Interpret the intercept in the context of the data. Include any relevant values in your response.</p></li>
 <li><p>Consider the relationship between age and one’s opinion about spending on mass transportation. Interpret the coefficient of age in terms of the <strong>odds</strong> of being satisfied with spending on mass transportation.</p></li>
-<li><p>Now let’s see whether a person’s political views has a significant impact on their odds of being satisfied with spending on mass transportation, after accounting for the demographic factors.</p></li>
-</ol>
-<p>Conduct a drop-in-deviance test to determine if <code>polviews</code> is a significant predictor of attitude towards spending on mass transportation. State the null and alternative hypotheses in words, display all relevant code and output, and state your conclusion in the context of the problem.</p>
-<ol start="10" style="list-style-type: decimal">
-<li>Use the model to describe the relationship between one’s political views and their attitude towards spending on mass transportation. Be sure your answer includes the interpretation of the model coefficients and associated hypothesis tests or confidence intervals used to support your response.</li>
+<li><p>Now let’s see whether a person’s political views has a significant impact on their odds of being satisfied with spending on mass transportation, after accounting for the demographic factors.</p>
+<p>Conduct a drop-in-deviance test to determine if <code>polviews</code> is a significant predictor of attitude towards spending on mass transportation. State the null and alternative hypotheses in words, display all relevant code and output, and state your conclusion in the context of the problem.</p></li>
+<li><p>Use the model to describe the relationship between one’s political views and their attitude towards spending on mass transportation. Be sure your answer includes the interpretation of the model coefficients and associated hypothesis tests or confidence intervals used to support your response.</p></li>
 </ol>
 </div>
 </div>
