--- a/public/project/index.html
+++ b/public/project/index.html
@@ -425,8 +425,9 @@ summary of what you have learned about your research question along with statist
 <h2 id="peer-review">Peer review</h2>
 <p>Critically reviewing others&rsquo; work is a crucial part of the scientific process, and STA 199 is no exception. You will be assigned a team to review. As part of the review process, you must provide your partner team a copy of your current report by <strong>Wednesday, October 28</strong>. After giving the report to your partner team, they will have until <strong>Friday, November 5</strong> to provide a detailed critique about the written report and data analysis. This feedback is intended to help you create a high quality final project, as well as give you experience
 reading and constructively critiquing the work of others.</p>
-<p>During the peer review process, you will be provided read-only access to your  partner team&rsquo;s GitHub repo. Provide your review in the form of GitHub issues to your partner team&rsquo;s GitHub repo.</p>
-<p>Peer review will be graded on the extent to which it comprehensively and constructively addresses the components of the partner team&rsquo;s report: the  research context and motivation, exploratory data analysis, and any inference, modeling, or conclusions. You must have at least some of these results available for your partner team to review.</p>
+<p>During the peer review process, you will be provided read-only access to your  partner team&rsquo;s GitHub repo. Provide your review in the form of GitHub issues to your partner team&rsquo;s GitHub repo.
+Peer review will be graded on the extent to which it comprehensively and constructively addresses the components of the partner team&rsquo;s report: the  research context and motivation, exploratory data analysis, and any inference, modeling, or conclusions.</p>
+<p>As you work on the draft, the focus should be on the analysis and less on crafting the final report.  <strong>Your draft must include a reasonable attempt at each analysis component - exploratory data analysis, modeling, and preliminary inferential conclusions.</strong></p>
 <p>The final report is due on <strong>Tuesday, November 17.</strong></p>
 <h2 id="presentation-slides">Presentation Slides</h2>
 <p>In addition to the write-up, your team must also create presentation
