update hw 05 wording

--- a/public/hw/hw-05.html
+++ b/public/hw/hw-05.html
@@ -1717,7 +1717,7 @@ library(knitr)
 </blockquote>
 <ol style="list-style-type: decimal">
 <li><p>Use the calculated results to construct a table displaying the relationship between the whether or not the mother used IVF and whether or not the baby had a birth defect.</p></li>
-<li><p>Calculate the odds that a baby will be born with a birth defect.</p></li>
+<li><p>Calculate the odds that a baby in this study was born with a birth defect.</p></li>
 <li><p>The conclusion from the report was the following:</p></li>
 </ol>
 <blockquote>
