--- a/public/schedule/week-06/index.html
+++ b/public/schedule/week-06/index.html
@@ -294,7 +294,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-10/">Week 10</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-10/">Week 10: Logistic regression</a>
         </div>
     </div>
     
