--- a/static/slides/19-logistic-prediction.html
+++ b/static/slides/19-logistic-prediction.html
@@ -160,7 +160,8 @@ predict(risk_m, x0)
 
 
 ```r
-predict(risk_m, x0, type = "response") 
+predict(risk_m, x0, 
+      type = "response") 
 ```
 
 ```
