--- a/public/schedule/week-10/index.html
+++ b/public/schedule/week-10/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/19-logistic-prediction.html#1">Logistic regression: Prediction</a></td>
 <td><a href="https://warpwire.duke.edu/w/lakEAA/">Logistic regression: Prediction</a></td>
-<td>AE 19</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-19-prediction.html">AE 19: Predicting Response to Leukemia Treatment</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
@@ -408,19 +408,42 @@ font-size: 18px;
 <td><a href="https://sta210-fa20.netlify.app/quiz/quiz-03.html">Quiz 03</a></td>
 <td><strong>Oct 22 - 23</strong></td>
 </tr>
+<tr>
+<td><a href="https://sta210-fa20.netlify.app/project">Project Draft</a></td>
+<td><strong>due Oct 28 at 11:59p</strong></td>
+</tr>
 </tbody>
 </table>
 <h2 id="announcements">Announcements&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#announcements">🔗&#xFE0E;</a> </h2>
-<!--
-Hang out with the TAs from STA 210! This is a casual conversation and a fun opportunity to meet the members of the STA 210 teaching team. The only rule is these can't turn into office hours! 
-
-Tea with a TA counts as a statistics experience.
-
-**Upcoming teas**: 
-
-[**Emily Tallman**](http://linkedin.com/in/emily-tallman), Thu, Oct 15 11a - 12p
-  - [Click here](https://forms.gle/fZANces6Qw1gpwcc6) to sign up
---> 
+<h3 id="tea-with-a-ta">Tea with a TA</h3>
+<p>Hang out with the TAs from STA 210! This is a casual conversation and a fun opportunity to meet the members of the STA 210 teaching team. The only rule is these can&rsquo;t turn into office hours!</p>
+<p>Tea with a TA counts as a statistics experience.</p>
+<p><strong>Upcoming teas</strong>:</p>
+<p><a href="https://meredithb3.github.io/"><strong>Meredith Brown</strong></a>, Tue, Oct 27 at 7p</p>
+<ul>
+<li><a href="https://forms.gle/fx3rUyhSYTZ9EmnE7">Click here</a> to sign up. Zoom details will be emailed before the event.</li>
+</ul>
+<p><em>I am a junior at Duke University majoring in Computer Science and Statistics with a Math minor. I’m from Raleigh, North Carolina, where I grew up an avid UNC basketball fan - it’s been quite the adjustment. My research interests focus on the intersection of public health and data science, such as how social determinants of health can aid in predicting hospital admissions or, more recently, how the COVID-19 pandemic impacts healthcare utilization at Duke. In my free time, you can find me playing soccer, doing the NYT crossword, or cheering for Duke basketball.</em></p>
+<h3 id="big-data-for-public-policy-panel">Big Data for Public Policy Panel</h3>
+<p><strong>When:</strong> October 26 at 8-9 PM</p>
+<p><strong>What:</strong> How has the development of “Big Data” affected public policy research? What is it like to work as a statistician/policy researcher for the ACLU or Southern Poverty Law Center?</p>
+<p>Join the Duke Statistical Science Majors Union and our four panelists in an important discussion of how they use statistics in their policy research, what types of models they use, and the impact that statistics has had on their research.</p>
+<p><strong>Who:</strong></p>
+<ul>
+<li>
+<p>Brandon Garrett (Faculty Director of Wilson Center for Science and Justice, L. Neil Williams, Jr. Professor of Law at Duke)</p>
+</li>
+<li>
+<p>Frank Baumgartner (Richard J. Richardson Distinguished Professor of Political Science at UNC Chapel Hill)</p>
+</li>
+<li>
+<p>Cristina Becker (Attorney at National ACLU Capital Punishment Project, former Criminal Justice Debt Fellow at ACLU-NC)</p>
+</li>
+<li>
+<p>Delvin Davis (Senior Criminal Justice Policy Analyst at Southern Poverty Law Center, former Senior Research Analyst at Center for Responsible Lending)</p>
+</li>
+</ul>
+<p><strong>The Zoom link and a link to submit questions are in Sakai.</strong></p>
 <h3 id="this-is-statistics-fall-data-challenge">This is Statistics Fall Data Challenge</h3>
 <p><a href="https://thisisstatistics.org/falldatachallenge/">Click here</a> for details on the Get out the Vote! Fall Data Challenge by the American Statistical Association (ASA). Submissions are due <strong>November 11</strong>.</p>
 
