update ae 19 announcements

--- a/public/appex/ae-19-prediction.html
+++ b/public/appex/ae-19-prediction.html
@@ -389,12 +389,26 @@ summary {
 <div id="big-data-and-public-policy-event-on-oct-26" class="section level3">
 <h3>Big data and public policy event on Oct 26</h3>
 </div>
+<div id="final-project---draft-due-oct-28" class="section level3">
+<h3>Final project - Draft due Oct 28</h3>
+<ul>
+<li>Write the draft in the <code>written-report.Rmd</code> file in the project repo.</li>
+<li>Draft should include
+<ul>
+<li>exploratory data analysis</li>
+<li>initial model selection (main effects + interactions)</li>
+<li>initial interpretations / conclusions from model</li>
+</ul></li>
+</ul>
+</div>
 </div>
 <div id="quiz-02" class="section level2">
 <h2>Quiz 02</h2>
-</div>
-<div id="questions-from-the-video" class="section level2">
-<h2>Questions from the video?</h2>
+<ul>
+<li>Question 1.5</li>
+<li>Question 2</li>
+<li>Question 3 - D and E</li>
+</ul>
 </div>
 <div id="response-to-leukemia-treatment" class="section level2">
 <h2>Response to Leukemia treatment</h2>
