add lec 20 slides

--- a/public/schedule/week-10/index.html
+++ b/public/schedule/week-10/index.html
@@ -374,7 +374,7 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Logistic regression: Conditions</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/20-logistic-conditions.html">Logistic regression: Conditions</a></td>
 <td>Logistic Regression: Conditions</td>
 <td>AE 20</td>
 </tr>
