--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1341,10 +1341,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 21</td>
             <td style="width:40%;text-align:left">Logistic regression: Conditions</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/20-logistic-conditions.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -1607,7 +1606,32 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Nov 05</td>
-            <td style="width:40%;text-align:left">Lab 08</td>
+            <td style="width:40%;text-align:left">No Lab: Take Quiz 04</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left">Quiz 04 assigned</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1649,6 +1673,29 @@ table tbody tr:nth-child(odd){
             </td>
             <td align="center" style="width:10%;text-align:center"><a href="/project/#peer-review">
                     <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Fri, Nov 06</td>
+            <td style="width:40%;text-align:left">Quiz 04 due</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-04.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 13</td>
