--- a/static/slides/20-logistic-conditions.html
+++ b/static/slides/20-logistic-conditions.html
@@ -21,7 +21,7 @@ class: center, middle, inverse, title-slide
 
 class: middle, center
 
-## [Click for PDF of slides](19-logistic-prediction.pdf)
+## [Click for PDF of slides](20-logistic-conditions.pdf)
 
 
 
