post lec 20 video

--- a/public/schedule/week-10/index.html
+++ b/public/schedule/week-10/index.html
@@ -375,7 +375,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/20-logistic-conditions.html">Logistic regression: Conditions</a></td>
-<td>Logistic Regression: Conditions</td>
+<td><a href="https://warpwire.duke.edu/w/Z60EAA/">Logistic Regression: Conditions</a></td>
 <td>AE 20</td>
 </tr>
 </tbody>
