--- a/public/slides/20-logistic-conditions.html
+++ b/public/slides/20-logistic-conditions.html
@@ -84,7 +84,7 @@ The .vocab[empirical logit] is the log of the observed odds
 
 ---
 
-## Calculating emprical logit (categorical predictor)
+## Calculating empirical logit (categorical predictor)
 
 If the predictor is categorical, we can calculate the empirical logit for each level of the predictor.
 
@@ -102,7 +102,7 @@ heart %&gt;%
 
 ---
 
-## Calculating emprical logit (categorical predictor)
+## Calculating empirical logit (categorical predictor)
 
 If the predictor is categorical, we can calculate the empirical logit for each level of the predictor
 
