--- a/public/schedule/week-10/index.html
+++ b/public/schedule/week-10/index.html
@@ -376,7 +376,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/20-logistic-conditions.html">Logistic regression: Conditions</a></td>
 <td><a href="https://warpwire.duke.edu/w/Z60EAA/">Logistic Regression: Conditions</a></td>
-<td>AE 20</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-20-conditions.html">AE 20: Predictions + Conditions</a></td>
 </tr>
 </tbody>
 </table>
