--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -295,7 +295,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-11/">Week 11</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-11/">Week 11: Multinomial logistic regression</a>
         </div>
     </div>
     
@@ -1436,10 +1436,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right">Week 11</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 26</td>
             <td style="width:40%;text-align:left">Multinomial logistic regression</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/21-multinom-logistic.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
