--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -299,7 +299,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-11/">Week 11</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-11/">Week 11: Multinomial logistic regression</a>
         </div>
     </div>
     
