--- a/public/schedule/week-11/index.html
+++ b/public/schedule/week-11/index.html
@@ -369,7 +369,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/21-multinom-logistic.html">Multinomial logistic regression: Introduction</a></td>
 <td><a href="https://warpwire.duke.edu/w/BbMEAA/">Multinomial logistic regression: Introduction</a></td>
-<td>AE 21</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-21-sesame-street.html">AE 21: Sesame Street</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
@@ -415,7 +415,7 @@ font-size: 18px;
 <li><a href="https://forms.gle/fx3rUyhSYTZ9EmnE7">Click here</a> to sign up. Zoom details will be emailed before the event.</li>
 </ul>
 <p><em>I am a junior at Duke University majoring in Computer Science and Statistics with a Math minor. I’m from Raleigh, North Carolina, where I grew up an avid UNC basketball fan - it’s been quite the adjustment. My research interests focus on the intersection of public health and data science, such as how social determinants of health can aid in predicting hospital admissions or, more recently, how the COVID-19 pandemic impacts healthcare utilization at Duke. In my free time, you can find me playing soccer, doing the NYT crossword, or cheering for Duke basketball.</em></p>
-<p><a href="www.linkedin.com/in/cody-coombs-3b8034158"><strong>Cody Coombs</strong></a></p>
+<p><a href="www.linkedin.com/in/cody-coombs-3b8034158"><strong>Cody Coombs</strong></a>, Thu, Nov 5, 4p - 5p</p>
 <ul>
 <li><a href="https://forms.gle/qCm63S4jUUXdnmFJ9">Click here</a> to sign up. Zoom details will be emailed before the event.</li>
 </ul>
