--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1459,11 +1459,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 28</td>
-            <td style="width:40%;text-align:left">Multinomial logistic regression</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Multinomial logistic regression, Pt2</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/22-multinom-logistic-pt2.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
