--- a/public/schedule/week-11/index.html
+++ b/public/schedule/week-11/index.html
@@ -373,8 +373,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td><a href="https://sta210-fa20.netlify.app/slides/22-multinom-logistic-pt2.html">Multinomial logistic regression: Prediction</a></td>
-<td>Multinomial logistic regression: Prediction</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/22-multinom-logistic-pt2.html">Multinomial logistic regression, Part 2</a></td>
+<td><a href="https://warpwire.duke.edu/w/UbcEAA/">Multinomial logistic regression, Part 2</a></td>
 <td>AE 22</td>
 </tr>
 </tbody>
