--- a/public/slides/22-multinom-logistic-pt2.html
+++ b/public/slides/22-multinom-logistic-pt2.html
@@ -472,7 +472,7 @@ We want to check the following assumptions for the multinomial logistic regressi
 
 ## Checking linearity 
 
-Similar to logistic regression, we will check linearity by examining empirical logit plots between each level of the predictor and the quantitative predictor variables.
+Similar to logistic regression, we will check linearity by examining empirical logit plots between each level of the response and the quantitative predictor variables.
 
 .small[
 
