--- a/public/schedule/week-11/index.html
+++ b/public/schedule/week-11/index.html
@@ -375,7 +375,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/22-multinom-logistic-pt2.html">Multinomial logistic regression, Part 2</a></td>
 <td><a href="https://warpwire.duke.edu/w/UbcEAA/">Multinomial logistic regression, Part 2</a></td>
-<td>AE 22</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-22-project.html">AE 22: Multinomial logistic Q+A and Project</a></td>
 </tr>
 </tbody>
 </table>
