add peer review

--- a/public/schedule/week-11/index.html
+++ b/public/schedule/week-11/index.html
@@ -400,7 +400,7 @@ font-size: 18px;
 <td><strong>due Oct 28 at 11:59p</strong></td>
 </tr>
 <tr>
-<td><a href="https://sta210-fa20.netlify.app/project">Project peer review</a></td>
+<td><a href="https://sta210-fa20.netlify.app/labs/peer-review.html">Project peer review</a></td>
 <td><strong>due Nov 5 at 11:59p</strong></td>
 </tr>
 </tbody>
