--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1511,10 +1511,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/labs/peer-review.html">
+                    <i class="far fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
@@ -1523,8 +1521,10 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center"><a href="/project/#peer-review">
-                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
@@ -1657,10 +1657,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/labs/peer-review.html">
+                    <i class="far fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
@@ -1669,8 +1667,10 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center"><a href="/project/#peer-review">
-                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
