--- a/static/labs/peer-review.html
+++ b/static/labs/peer-review.html
@@ -494,7 +494,7 @@ text-decoration: underline;
 <li>Is the paper professionally presented and generally free of distracting errors or other issues, including (but not limited to) insufficient organization or formatting; poor grammar, spelling, or punctuation; or too-small font? Is the overall paper easily readable for someone with your expert level of knowledge? Note any concerns here.</li>
 <li>Knit the .Rmd file. Are you able to reproduce all aspects of the report, including output, visualizations, etc? This includes (1) being able to knit the document and (2) obtaining the same PDF as the original PDF.</li>
 <li>What questions and/or general feedback do you have for the authors?</li>
-<li>If you had to go back and improve your own submission after giving feedback to this submission, what would you change?</li>
+<li>After giving feedback to this group, what is one thing you want to change or continue working on for your report?</li>
 </ul>
 </div>
 </div>
