add ae 23 video

--- a/public/schedule/week-12/index.html
+++ b/public/schedule/week-12/index.html
@@ -369,7 +369,7 @@ font-size: 18px;
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/23-poisson.html">Log-linear models</a></td>
-<td>Log-linear models</td>
+<td><a href="https://warpwire.duke.edu/w/r70EAA/">Log-linear models</a></td>
 <td>AE 23</td>
 </tr>
 <tr>
