--- a/static/slides/23-poisson.html
+++ b/static/slides/23-poisson.html
@@ -132,10 +132,6 @@ If the observed values `\(Y_i\)` are Poisson, then we can model using a &lt;font
 .alert[
 `$$\log(\lambda_i) = \beta_0 + \beta_1 x_{1i} + \beta_2 x_{2i} + \dots + \beta_p x_{pi}$$`
 ]
-
-
-Note that we don't have an error term, since `\(\lambda\)` determines the mean and variance of the Poisson random variable
-
 ---
  
 ## Interpreting Model Coefficients
@@ -143,7 +139,7 @@ Note that we don't have an error term, since `\(\lambda\)` determines the mean a
 - &lt;font class="vocab"&gt;Slope, `\(\beta_j\)`: &lt;/font&gt;
     - **Quantitative Predictor**:  When `\(x_j\)` increases by one unit, the mean of `\(y\)` is expected to multiply by a factor of `\(\exp\{\beta_j\}\)`, (*holding all else constant*).
     
-    - **Categorical Predictor**: The mean of `\(y\)` for category `\(k\)` is `\(\exp\{\beta_j\}\)` times the mean of `\(y\)`  for the baseline category, (*holding all else constant*).
+    - **Categorical Predictor**: The mean of `\(y\)` for category `\(k\)` is expected to be `\(\exp\{\beta_j\}\)` times the mean of `\(y\)`  for the baseline category, (*holding all else constant*).
 
 --
 
@@ -234,7 +230,7 @@ tidy(model1, conf.int = T) %&gt;%
 &lt;/table&gt;
 ]
 
-`$$\color{#87037B}{\log(\text{total}) = 1.302 - 0.0047 \times \text{age}}$$`
+`$$\color{#87037B}{\log(\overline{\text{total}}) = 1.303 - 0.0047 \times \text{ageCent}}$$`
 
 ---
 
@@ -276,11 +272,11 @@ tidy(model1, conf.int = T) %&gt;%
 
 --
 
-For each additional year older the head of the household is, we expect the mean number in the house to multiply by a factor of 0.995 (exp(-0.0.0047)). 
+For each additional year older the head of the household is, we expect the mean number in the house to multiply by a factor of 0.995 (exp(-0.0047)). 
 
 --
 
-For households with a head of the household who is 52.657 years old, we expect the mean number of people in the household to be 3.677 (exp(1.302)).
+For households with a head of the household who is 52.657 years old, we expect the mean number of people in the household to be 3.68 (exp(1.303)).
 
 
 ---
@@ -291,13 +287,14 @@ We can use a .vocab[drop-in-deviance test] to compare nested models (similar to 
 
 Let's try adding `ageCent^2` to the model. 
 
-`$$H_0: \beta_{age^2} = 0 \text{ vs. }\beta_{age^2} \neq 0$$`
+`$$H_0: \beta_{ageCent^2} = 0 \text{ vs. }H_a: \beta_{ageCent^2} \neq 0$$`
 
 .midi[
 
 ```r
 model1 &lt;- glm(total ~ ageCent, data = hh, family = "poisson")
-model2 &lt;- glm(total ~ ageCent + I(ageCent^2), data = hh, family = "poisson")
+model2 &lt;- glm(total ~ ageCent + I(ageCent^2),
+              data = hh, family = "poisson")
 ```
 
 
@@ -393,13 +390,13 @@ The p-value is small, so we reject `\(H_0\)`. We will include `ageCent^2` to the
 
 ## Model Assumptions 
 
-1. .vocab[Poisson Response]: The response follows a Poisson distribution for each level of the predictor
+1. .vocab[Poisson Response]: The response follows a Poisson distribution for each level of the predictor.
 
-2. .vocab[Independence]: The observations are independent of one another
+2. .vocab[Independence]: The observations are independent of one another.
 
-3. .vocab[Mean = variance]: The mean value of the response equals the variance of the response for each level of the predictor 
+3. .vocab[Mean = variance]: The mean value of the response equals the variance of the response for each level of the predictor.
 
-4. .vocab[Linearity]: `\(\log(\lambda)\)` is a linear function of the predictors
+4. .vocab[Linearity]: `\(\log(\lambda)\)` is a linear function of the predictors.
 
 ---
 
@@ -482,17 +479,17 @@ It appears the assumption is violated in some age groups; however, the violation
 
 ## Linearity 
 
-The raw residual for the `\(i^{th}\)` observation, `\(y_i - \hat{\lambda}_i\)`, is difficult to interpret since the variance is equal to the mean in the Poisson distribution
+The raw residual for the `\(i^{th}\)` observation, `\(y_i - \hat{\lambda}_i\)`, is difficult to interpret since the variance is equal to the mean in the Poisson distribution.
 
 --
 
 
-Instead, we can analyze a standardized residual called the .vocab[Pearson residual]
+Instead, we can analyze a standardized residual called the .vocab[Pearson residual].
 `$$r_i = \frac{y_i - \hat{\lambda}_i}{\sqrt{\hat{\lambda}_i}}$$`
 
 --
 
-We will examine a plot of the Pearson residuals versus the predicted values to check the linearity assumption 
+We will examine a plot of the Pearson residuals versus the predicted values to check the linearity assumption.
 
 ---
 
