--- a/public/schedule/week-12/index.html
+++ b/public/schedule/week-12/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/23-poisson.html">Log-linear models</a></td>
 <td><a href="https://warpwire.duke.edu/w/r70EAA/">Log-linear models</a></td>
-<td>AE 23</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-23-multinom.html">AE 23: Multinomial + Log-linear</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
