add some info about quiz 04

--- a/public/appex/ae-23-multinom.html
+++ b/public/appex/ae-23-multinom.html
@@ -414,6 +414,13 @@ summary {
 <p>Q 4.2 thrown out (3 free points, +1 bonus if correct)</p>
 <p>After fitting a logistic regression, you compute the raw residual, <span class="math inline">\(y_i - \hat{\pi}_i\)</span>, for each observation. 20% of the raw residuals are positive, and 80% are negative. Because there are far more raw residuals below zero than above zero, this logistic regression does not fit the data well.</p>
 </div>
+<div id="quiz-04" class="section level2">
+<h2>Quiz 04</h2>
+<p>Thu, Nov 5 - Sun, Nov 8, not timed.</p>
+<p>Basic premise: You will be given a case study scenario and a few question prompts. You will apply what you’ve learned throughout the semester to the given scenario.</p>
+<p>You will submit your answer in narrative form.</p>
+<p>More details will be emailed Thursday morning.</p>
+</div>
 <div id="questions-about-election" class="section level2">
 <h2>Questions about election</h2>
 <p><a href="https://sta210-fa20.netlify.app/slides/election-questions.html">Click here</a> for slides.</p>
